    various translations.  Much of this is now in common
    rules files making it easier to add new translations.

- Documentation:

  * [doc]: Add doctype headers to html docs.
  * Italian translation (Closes: #674664)
  * Fix minor errors in documentation. Thanks to Beatrice Torracca
    (Closes: #674675)
  * Fix groff warning in manpage (Closes: #675085)

- Translation updates:

  * French (Closes: #673827, LP: #642840)
  * German (Closes: #672467)
  * Simplified Chinese

[5/2/2012]
Version 0.6.7                               "I said 'Step pause turn
                                             pause pivot step step'"

- Crashes and serious errors:

  * [cmdline]: Avoid dpkg and infinite loop in download-only mode
               (Closes: #629266) (LP: #975793)

  * [cmdline]: Check for apt_init errors in cmdline_download.cc
               (Closes: #670379)

- Minor bugs:

  * [all]: Fix various locking issues:

           - 'install' actions lock /var/cache/apt/archives

             Other tasks which access that directory (such as 'apt-get
             clean') will now fail if aptitude is downloading or
             installing packages. (Closes: #370381)

  * [all]: Actually use aptitude::Logging::Levels (Closes: #654344)

- Internal changes:

  * [all]: No longer use ListUpdate (from libapt-pkg) to update package
           lists.  Instead, restore the previous code and update it to
           include the semantics from ListUpdate which were missing.

           ListUpdate was too coarse to suit download_update_manager
           properly even though it more-or-less worked.

  * [all]: Do not call debtags on list update.  This was a rather
           unsightly kludge is better suited as a script for
           APT::Update::Post-Invoke.

  * [all]: Destroy download_threads when done with them.  The objects
           were previously left undestroyed, consuming resources and
           keeping, e.g., locks open longer than needed.

- Cosmetic and UI bugs:
