@@ -1,6 +1,11 @@
 #!/bin/bash
 #
+# Usage: html-to-text input encoding
+#
 # This is just a layer of indirection so the html-to-text utility can
 # be changed in a central location.
 
-exec elinks -dump -no-references -no-numbering "$@"
+in="$1"
+encoding=$2
+
+exec elinks -dump -dump-charset $encoding -no-references -no-numbering "$in"
