@@ -79,6 +79,9 @@ earlier releases.
   * Fix minor errors in documentation. Thanks to Beatrice Torracca
     (Closes: #674675)
   * Fix groff warning in manpage (Closes: #675085)
+  * Fix encoding problems with README files
+  * Install some localized README files which were previously
+    left out.
 
 - Translation updates:
 
